tests/ui/const-not-fn.stderr
error: only allowed on a fn item
 --> tests/ui/const-not-fn.rs:1:33
  |
1 | #[rustversion_msrv::attr(all(), const)]
  |                                 ^^^^^
