tests/ui/const-not-fn.rs
#[rustversion_msrv::attr(all(), const)]
pub struct S;

fn main() {}
